--- a/app.json
+++ b/app.json
@@ -23,10 +23,11 @@
     },
     "web": {
       "favicon": "./assets/images/favicon.png",
+      "output": "server",
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router",
+      ["expo-router",{"origin":"http://localhost:8081"}],
       [
         "expo-splash-screen",
         {
@@ -37,8 +38,8 @@
           "dark": {
             "backgroundColor": "#000000"
           }
-        }
-      ]
+        },
+      ],
     ],
     "experiments": {
       "typedRoutes": true,
