--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "dotenv": "^17.2.2",
     "expo": "~54.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -55,6 +56,7 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
