--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/clerk-expo": "^2.15.0",
     "@expo/vector-icons": "^15.0.2",
     "@neondatabase/serverless": "^1.0.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -25,12 +26,15 @@
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.7",
+    "expo-notifications": "^0.32.11",
     "expo-router": "~6.0.6",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "^14.0.7",
     "expo-web-browser": "~15.0.7",
     "lucide": "^0.544.0",
     "lucide-react-native": "^0.544.0",
@@ -40,6 +44,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "^1.26.9",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
@@ -56,7 +61,7 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
