feat(database): Implement comprehensive schema fixes and enhancements
- Added missing columns to users table: name, profile_image_url, phone
- Enhanced transporter_profiles with current_latitude and current_longitude
- Created missing chats table for user communication
- Updated shipments table to include driver_id, order_number, and tracking_number
- Fixed profile_completed column type to BOOLEAN
- Created tracking and ratings views for API compatibility
- Introduced system_settings table with default values
- Added utility functions for common operations
- Improved indexing for performance across multiple tables
- Inserted default system settings for application configuration
- Fixed data integrity issues and synced location data for transporters
- Created scripts for applying database fixes and generating sample data
- Developed API testing scripts to ensure functionality and resolve errors

--- a/app.json
+++ b/app.json
@@ -27,7 +27,12 @@
       "bundler": "metro"
     },
     "plugins": [
-      ["expo-router",{"origin":"http://localhost:8081"}],
+      [
+        "expo-router",
+        {
+          "origin": "http://localhost:8081"
+        }
+      ],
       [
         "expo-splash-screen",
         {
@@ -38,8 +43,9 @@
           "dark": {
             "backgroundColor": "#000000"
           }
-        },
+        }
       ],
+      "expo-maps"
     ],
     "experiments": {
       "typedRoutes": true,
