--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "dotenv": "^17.2.2",
-    "expo": "~54.0.8",
+    "expo": "~54.0.10",
+    "expo-clipboard": "^8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -27,14 +28,15 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
+    "expo-maps": "~0.12.7",
     "expo-notifications": "^0.32.11",
-    "expo-router": "~6.0.6",
+    "expo-router": "~6.0.8",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-task-manager": "^14.0.7",
+    "expo-task-manager": "~14.0.7",
     "expo-web-browser": "~15.0.7",
     "lucide": "^0.544.0",
     "lucide-react-native": "^0.544.0",
@@ -44,11 +46,11 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "^1.26.9",
-    "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.21.0",
