--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@types/leaflet": "^1.9.20",
     "dotenv": "^17.2.2",
     "expo": "~54.0.10",
     "expo-clipboard": "^8.0.7",
@@ -38,12 +39,14 @@
     "expo-system-ui": "~6.0.7",
     "expo-task-manager": "~14.0.7",
     "expo-web-browser": "~15.0.7",
+    "leaflet": "^1.9.4",
     "lucide": "^0.544.0",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
@@ -54,6 +57,7 @@
     "react-native-svg-transformer": "^1.5.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.17"
   },
